release-data/changelogs/9.0/plugins/auth-backends.adoc
= Changelogs for Rudder plugin auth-backends 9.0.\* versions

== auth-backends-9.0.6-2.7 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.5-2.7 (2026-04-02)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.4-2.7 (2026-02-16)

=== Changes


==== Documentation

* Add debugging entry for clock mismatch between Rudder server and auth server
    (https://issues.rudder.io/issues/28322[#28322])

=== Bug fixes

==== Miscellaneous

* Fixed: There is no debug logs for JWT/opaque OIDC tokens attributes
    (https://issues.rudder.io/issues/28132[#28132])
* Fixed: Documentation for opaque OIDC tokens is wrong for client_id
    (https://issues.rudder.io/issues/28129[#28129])

==== Web - UI & UX

* Fixed: Login form button does not work with OIDC enabled
    (https://issues.rudder.io/issues/28119[#28119])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.3-2.7 (2025-12-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.2-2.7 (2025-12-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.1-2.7 (2025-11-19)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.0-2.7 (2025-10-22)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.0.rc2-2.7 (2025-10-15)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.0.rc1-2.7 (2025-10-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.0.beta2-2.7 (2025-10-07)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.0.beta1-2.7 (2025-09-09)

=== Changes


=== Bug fixes

==== Documentation

* Fixed: How to configure a proxy for SSO feature
    (https://issues.rudder.io/issues/27320[#27320])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.0.0.alpha1-2.7 (2025-07-24)

=== Changes


==== Plugins management

* Update plugins parent pom to use scala 3
    (https://issues.rudder.io/issues/27032[#27032])

=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

