release-data/changelogs/9.1/plugins/auth-backends.adoc
= Changelogs for Rudder plugin auth-backends 9.1.\* versions

== auth-backends-9.1.1-2.7 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.1.0-2.7 (2026-04-13)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.1.0.rc1-2.7 (2026-04-10)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.1.0.beta1-2.7 (2026-03-10)

=== Changes


==== Documentation

* Add debugging entry for clock mismatch between Rudder server and auth server
    (https://issues.rudder.io/issues/28322[#28322])

==== Plugins management

* License should check instance id if defined 
    (https://issues.rudder.io/issues/28273[#28273])

=== Bug fixes

==== Plugins management

* Fixed: Update templating-maven-plugin since 1.0 API doesn't work with recent maven anymore (public)
    (https://issues.rudder.io/issues/28279[#28279])

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== auth-backends-9.1.0.alpha1-2.7 (2026-01-26)

=== Changes


==== Miscellaneous

* Update Scala dependencies - 9.1 
    (https://issues.rudder.io/issues/27842[#27842])

=== Bug fixes

==== Miscellaneous

* Fixed: There is no debug logs for JWT/opaque OIDC tokens attributes
    (https://issues.rudder.io/issues/28132[#28132])
* Fixed: Documentation for opaque OIDC tokens is wrong for client_id
    (https://issues.rudder.io/issues/28129[#28129])

==== Web - UI & UX

* Fixed: Login form button does not work with OIDC enabled
    (https://issues.rudder.io/issues/28119[#28119])

=== Release notes

This is a bug fix release in the 9.1 series and therefore all installations of 9.1.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

